src/test/deca/context/valid/homeMade/tests/test01_affectation.deca
// test valide de la règle 0.1


{
    int a, b, c;
    int d;
    int e, f;
    int g = 1;

    a;
    b;
    c;
    d;
    e;
    f;
    g;
}